kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure
  labels:
    app: azure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure
  template:
    metadata:
      labels:
        app: azure
    spec:
      containers:
      - name: azure
        image: marlin1993/selise:16
        ports:
        - containerPort: 80
