kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure
spec:
  type: LoadBalancer
  selector:
    app: azure
  ports:
    - port: 80
      targetPort: 80
